# nux-emulator

./: .editorconfig  .gitignore  Cargo.toml  README.md
.github/workflows/: build-linux.yml  release.yml
data/: io.github.nux-emulator.desktop  io.github.nux-emulator.metainfo.xml
keymaps/: generic-moba.toml
nux-core/: Cargo.toml
nux-core/src/: lib.rs
nux-core/src/adb/: mod.rs  protocol.rs  shell.rs  sync.rs  transport.rs  types.rs
nux-core/src/audio/: command.rs  config.rs  error.rs  latency.rs  mod.rs  volume.rs
nux-core/src/config/: migration.rs  mod.rs  paths.rs  schema.rs  tests.rs  validation.rs
nux-core/src/display/: capture.rs  config.rs  error.rs  mod.rs  sync.rs
nux-core/src/gservices/: detection.rs  download.rs  mod.rs  overlay.rs  status.rs  switching.rs  types.rs
nux-core/src/input/: coordinate.rs  evdev.rs  grab.rs  manager.rs  mod.rs  translate.rs
nux-core/src/keymap/: error.rs  format.rs  mod.rs  scaling.rs  slots.rs
nux-core/src/network/: backend.rs  bridge.rs  config.rs  error.rs  mod.rs  passt.rs  tap.rs
nux-core/src/root/: apk.rs  error.rs  manager.rs  mod.rs  store.rs  switching.rs
nux-core/src/vm/: command.rs  config.rs  control.rs  detect.rs  error.rs  mod.rs  process.rs  state.rs
nux-ui/: Cargo.toml
nux-ui/src/: display.rs  main.rs  overlay.rs  settings.rs  state.rs  toolbar.rs  vm_launcher.rs  wayland_compositor.rs  wayland_protocol.rs  webrtc_display.rs  window.rs  x11_input.rs
nux-ui/src/keymap/: engine.rs  mod.rs  overlay.rs
nux-ui/src/scrcpy/: connection.rs  control.rs  decoder.rs  input.rs  mod.rs  server.rs
openspec/: config.yaml
openspec/changes/adb-bridge/: design.md  proposal.md  tasks.md
openspec/changes/adb-bridge/specs/adb-app-management/: spec.md
openspec/changes/adb-bridge/specs/adb-connection/: spec.md
openspec/changes/adb-bridge/specs/adb-file-transfer/: spec.md
openspec/changes/adb-bridge/specs/adb-shell/: spec.md
openspec/changes/android-image-build/: design.md  proposal.md  tasks.md
openspec/changes/android-image-build/specs/arm-translation/: spec.md
openspec/changes/android-image-build/specs/build-pipeline/: spec.md
openspec/changes/android-image-build/specs/device-tree/: spec.md
openspec/changes/android-image-build/specs/gfxstream-hals/: spec.md
openspec/changes/android-image-build/specs/image-preconfig/: spec.md
openspec/changes/android-image-build/specs/kernel-config/: spec.md
openspec/changes/android-image-build/specs/microg-integration/: spec.md
openspec/changes/archive/2026-03-15-project-scaffolding/: design.md  proposal.md  tasks.md
openspec/changes/ci-packaging/: design.md  proposal.md  tasks.md
openspec/changes/ci-packaging/specs/ci-build-workflow/: spec.md
openspec/changes/ci-packaging/specs/ci-release-workflow/: spec.md
openspec/changes/ci-packaging/specs/desktop-integration/: spec.md
openspec/changes/ci-packaging/specs/local-act-build/: spec.md
openspec/changes/config-system/: design.md  proposal.md  tasks.md
openspec/changes/config-system/specs/config-migration/: spec.md
openspec/changes/config-system/specs/config-resolution/: spec.md
openspec/changes/config-system/specs/config-schema/: spec.md
openspec/changes/crosvm-integration/: design.md  proposal.md  tasks.md
openspec/changes/crosvm-integration/specs/crosvm-build/: spec.md
openspec/changes/crosvm-integration/specs/crosvm-command/: spec.md
openspec/changes/crosvm-integration/specs/kvm-detection/: spec.md
openspec/changes/crosvm-integration/specs/vm-control-socket/: spec.md
openspec/changes/display-pipeline/: design.md  proposal.md  tasks.md
openspec/changes/google-services-manager/: design.md  proposal.md  tasks.md
openspec/changes/gtk-ui-shell/: design.md  proposal.md  tasks.md
openspec/changes/input-system/: design.md  proposal.md  tasks.md
openspec/changes/keymap-engine/: design.md  proposal.md  tasks.md
openspec/changes/networking-audio/: design.md  proposal.md  tasks.md
openspec/changes/root-manager/: design.md  proposal.md  tasks.md
openspec/specs/project-docs/: spec.md
scripts/: act-build.sh  install.sh  setup-kvm.sh  setup-network.sh
(+32 files in other folders)
