[package]
name = "nux-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
toml = "0.8"
dirs = "6"
anyhow = { workspace = true }
log = { workspace = true }
tokio = { version = "1", features = ["full"] }
nix = { version = "0.29", features = ["fs", "process", "signal", "user"] }
libc = "0.2"
thiserror = "2"
reqwest = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
