[package]
name = "nux-ui"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
nux-core = { path = "../nux-core" }
gtk4 = { version = "0.11", features = ["v4_10"] }
libadwaita = { version = "0.9", features = ["v1_5"] }
ffmpeg-next = "8.0"
anyhow = { workspace = true }
log = { workspace = true }

[lints]
workspace = true
