[package]
name = "nux-ui"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
nux-core = { path = "../nux-core" }
gtk4 = { version = "0.11", features = ["v4_10"] }
libadwaita = { version = "0.9", features = ["v1_5"] }
ffmpeg-next = "8.0"
wayland-server = "0.31"
wayland-backend = "0.3"
wayland-protocols = { version = "0.32", features = ["server"] }
wayland-scanner = "0.31"
nix = { version = "0.29", features = ["fs"] }
inotify = "0.11"
libc = "0.2"
glow = "0.16"
env_logger = "0.11"
anyhow = { workspace = true }
log = { workspace = true }
gstreamer = "0.25"
gstreamer-app = "0.25"
gstreamer-webrtc = "0.25"
gstreamer-sdp = "0.25"
gstreamer-video = "0.25"
serde_json = "1"
ureq = { version = "2", features = ["json", "native-tls"] }
native-tls = "0.2"

[lints.rust]
unsafe_code = "allow"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
