[package]
name = "nux-ui"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
nux-core = { path = "../nux-core" }
gtk4 = { version = "0.11", features = ["v4_10"] }
libadwaita = { version = "0.9", features = ["v1_5"] }
wayland-server = "0.31"
wayland-backend = "0.3"
wayland-protocols = { version = "0.32", features = ["server"] }
wayland-scanner = "0.31"
nix = { version = "0.29", features = ["fs"] }
libc = "0.2"
env_logger = "0.11"
anyhow = { workspace = true }
log = { workspace = true }

[lints.rust]
unsafe_code = "allow"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
